--- a/mdx-blog-main/src/pages/post.mdx
+++ b/mdx-blog-main/src/pages/post.mdx
@@ -1,6 +1,6 @@
 import {Link} from "gatsby";
 import {FiInfo} from "react-icons/fi";
-import {Counter, LikeButton} from "../components/Complete";
+import {Counter, LikeButton, RegVideo, Video} from "../components/Complete";
 
 <section className="mdx-page">
 
@@ -55,6 +55,120 @@ const LikeButton = () => {
 ```
 
 <LikeButton />
+
+<h2>video components</h2>
+
+<RegVideo />
+
+<Video />
+
+<h2>regular h2</h2>
+
+<h2 title>title h2</h2>
+
+<h4>inline code</h4>
+
+`console.log("hero there")`
+
+<h4> blockquote element </h4>
+
+<blockquote display="default">
+  Ennui stumptown blog, affogato intelligentsia actually swag vaporware vegan
+  try-hard echo park franzen cardigan everyday carry. Intelligentsia poke
+  truffaut seitan unicorn hella tacos tofu cornhole banh mi sartorial subway
+  tile wolf. Austin chillwave pour-over YOLO XOXO unicorn migas. Af normcore
+  banh mi, pitchfork sartorial pork belly fam thundercats vexillologist craft
+  beer.
+</blockquote>
+
+<blockquote display="info">
+  Ennui stumptown blog, affogato intelligentsia actually swag vaporware vegan
+  try-hard echo park franzen cardigan everyday carry. Intelligentsia poke
+  truffaut seitan unicorn hella tacos tofu cornhole banh mi sartorial subway
+  tile wolf. Austin chillwave pour-over YOLO XOXO unicorn migas. Af normcore
+  banh mi, pitchfork sartorial pork belly fam thundercats vexillologist craft
+  beer.
+</blockquote>
+
+<blockquote display="warning">
+  Ennui stumptown blog, affogato intelligentsia actually swag vaporware vegan
+  try-hard echo park franzen cardigan everyday carry. Intelligentsia poke
+  truffaut seitan unicorn hella tacos tofu cornhole banh mi sartorial subway
+  tile wolf. Austin chillwave pour-over YOLO XOXO unicorn migas. Af normcore
+  banh mi, pitchfork sartorial pork belly fam thundercats vexillologist craft
+  beer.
+</blockquote>
+
+<blockquote>
+  Ennui stumptown blog, affogato intelligentsia actually swag vaporware vegan
+  try-hard echo park franzen cardigan everyday carry. Intelligentsia poke
+  truffaut seitan unicorn hella tacos tofu cornhole banh mi sartorial subway
+  tile wolf. Austin chillwave pour-over YOLO XOXO unicorn migas. Af normcore
+  banh mi, pitchfork sartorial pork belly fam thundercats vexillologist craft
+  beer. Ennui stumptown blog, affogato intelligentsia actually swag vaporware
+  vegan try-hard echo park franzen cardigan everyday carry. Intelligentsia poke
+  truffaut seitan unicorn hella tacos tofu cornhole banh mi sartorial subway
+  tile wolf. Austin chillwave pour-over YOLO XOXO unicorn migas. Af normcore
+  banh mi, pitchfork sartorial pork belly fam thundercats vexillologist craft
+  beer.
+</blockquote>
+
+#### Javascript
+
+```js
+// comments
+const name = "john";
+const channel = "coding addict";
+
+function featuredProducts(data) {
+  return data.filter(item => {
+    return item.featured === true;
+  });
+}
+featuredProducts();
+```
+
+#### JSX
+
+```jsx
+import React from "react";
+
+const Counter = () => {
+  const [count, setCount] = React.useState(0);
+  return (
+    <section className="counter">
+      <h4>show some love to MDX</h4>
+      <h4>likes {count}</h4>
+      <button className="btn btn-danger" onClick={() => setCount(count + 1)}>
+        i like mdx
+      </button>
+    </section>
+  );
+};
+export default Counter;
+```
+
+#### HTML
+
+```html
+<h1>hello world</h1>
+<p class="random">random text</p>
+<section class="contact">
+  <div class="title">
+    <h1>contact us</h1>
+  </div>
+</section>
+```
+
+#### CSS
+
+```css
+max-width: 500px;
+border-radius: var(--radius);
+padding: 1rem 1.5rem;
+background: var(--clr-grey-10);
+text-align: center;
+```
 
 <Link to="/posts" className="btn center-btn">
   all posts
