--- a/mdx-blog-main/src/posts/10-post-number-ten/post.mdx
+++ b/mdx-blog-main/src/posts/10-post-number-ten/post.mdx
@@ -2,43 +2,80 @@
 title: Gatsby Tutorial
 slug: gatsby-tutorial
 image: ./images/gatsby-1.png
-date: 2021-06-04
-author: john jones
+date: 2020-05-27
+author: john smith
 category: gatsby
-readTime: 15
+readTime: 34
 ---
+
+import {FiInfo} from "react-icons/fi";
+import {Counter, LikeButton, RegVideo, Video} from "../../components/Complete";
 
 import {Link} from "gatsby";
 
-_I'm baby humblebrag neutra taiyaki af vice bespoke locavore fanny pack_ ramps vexillologist succulents. Normcore etsy pour-over adaptogen skateboard fashion axe, bushwick food truck beard lumbersexual master cleanse actually deep v. **Retro cardigan raw denim franzen kickstarter you probably haven't heard of them literally** aesthetic snackwave four dollar toast. Keffiyeh synth umami, helvetica yr flexitarian jean shorts banh mi cardigan leggings letterpress paleo intelligentsia narwhal.
+_I'm baby humblebrag neutra taiyaki af vice bespoke locavore fanny pack_ ramps vexillologist
+succulents. Normcore etsy pour-over adaptogen skateboard fashion axe, bushwick food
+truck beard lumbersexual master cleanse actually deep v. **Retro cardigan raw denim
+franzen kickstarter you probably haven't heard of them literally** aesthetic snackwave
+four dollar toast. Keffiyeh synth umami, helvetica yr flexitarian jean shorts banh
+mi cardigan leggings letterpress paleo intelligentsia narwhal.
 
-<blockquote>
-  I'm baby tumblr fanny pack tousled seitan. Man bun shaman yr, bushwick fam
-  hammock williamsburg kombucha keytar VHS. Chambray street art authentic,
-</blockquote>
+# Gatsby MDX
 
-<blockquote display="info">
-  I'm baby tumblr fanny pack tousled seitan. Man bun shaman yr, bushwick fam
-  hammock williamsburg kombucha keytar VHS. Chambray street art authentic,
-</blockquote>
+### Random Heading
+
+## More Examples
+
+<div className="code">
+
+```js
+const firstName = "john";
+const lastName = "smith";
+```
+
+ </div>
+
+<div className="nice-text">
+
+### Nice Text
+
+<FiInfo className="nice-text-icon"></FiInfo>
+
+I'm baby prism everyday carry post-ironic jean shorts venmo health goth, migas pok pok vape beard umami. Poutine plaid before they sold out cronut messenger bag, echo park hexagon tumblr +1 quinoa mumblecore paleo. Activated charcoal drinking vinegar VHS gentrify put a bird on it tousled.
+
+</div>
+
+## React Components
+
+<Counter />
 
 ```jsx
 import React from "react";
-
-const Counter = () => {
-  const [count, setCount] = React.useState(0);
+import styled from "styled-components";
+import {AiOutlineLike} from "react-icons/ai";
+const LikeButton = () => {
+  const [value, setValue] = React.useState(0);
   return (
-    <section className="counter">
-      <h4>show some love to MDX</h4>
-      <h4>likes {count}</h4>
-      <button className="btn btn-danger" onClick={() => setCount(count + 1)}>
-        i like mdx
-      </button>
-    </section>
+    <Wrapper>
+      <div>
+        <button onClick={() => setValue(value + 1)}>
+          <AiOutlineLike />
+        </button>
+        <p>
+          Liked the post?
+          <br />
+          Click thumbs up few times
+        </p>
+      </div>
+      <span>+{value}</span>
+    </Wrapper>
   );
 };
-export default Counter;
 ```
+
+<LikeButton />
+
+![nice image](./images/gatsby-1.png)
 
 <Link to="/posts" className="btn center-btn">
   all posts
